k8s/apps/jenkins/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: jenkins
spec:
  ports:
    - port: 8080
      name: webport
    - port: 50000
      name: slaveport1
  type: ClusterIP
  selector:
    app: jenkins
